samples/_failures_safe/1761253407_6de0ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d77b8b34.c: In function ‘main’:
./samples/SAFE/__tmp_d77b8b34.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
